objects/MMPJ_Ext_Vign_Demande_Extranet__c.object
<CustomObject>
    <description>MMPJ Extranet Vigneron - used for both Cognac &amp; Champagne</description>
    <fields>
        <fullName>MMPJ_Ext_Vign_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Demandes</relationshipLabel>
        <relationshipName>Demandes_Extranet_Vigneron</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_Date_de_demande__c</fullName>
        <label>Date de demande</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_Demande__c</fullName>
        <label>Demande</label>
        <length>50000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_Objet_de_la_demande__c</fullName>
        <label>Objet de la demande</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_Statut__c</fullName>
        <label>Statut</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A réaliser</fullName>
                    <default>true</default>
                    <label>A réaliser</label>
                </value>
                <value>
                    <fullName>En attente</fullName>
                </value>
                <value>
                    <fullName>Réalisé</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_Tech_Email_Contact__c</fullName>
        <label>Tech Email Contact</label>
        <type>Email</type>
    </fields>
    <label>Demande Extranet Vigneron</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>MMPJ_Ext_Vign_Objet_de_la_demande__c</columns>
        <columns>MMPJ_Ext_Vign_Statut__c</columns>
        <columns>MMPJ_Ext_Vign_Contact__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>fr</language>
        <sharedTo>
            <group>MMPJ_Ext_Vign_Global_PG_Champagne</group>
            <group>MMPJ_Ext_Vign_Global_PG_Cognac</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>Demande {000000}</displayFormat>
        <label>Numéro de demande</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Demandes Extranet Vigneron</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>